--- a/src/main.scss
+++ b/src/main.scss
@@ -116,3 +116,12 @@ body{
         font-family: 'Lexend Deca';
     }
 }
+#gale{
+    font-family: 'Lexend Deca';
+    color:darkorange;
+    margin: 5%;
+
+    &:hover{
+        color:rgb(11, 90, 82) ;
+    }
+}
